# gotatun

./: .gitignore  .licenserc.yaml  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE.md  Package.swift  README.md  SECURITY.md  UAPI.md  clippy.toml  flake.nix  wg-quick
.cargo/: config.toml
.github/workflows/: advisory-team-access.yml  cargo-shear.yml  docs.yml  license.yml  nix-check.yml  test.yml
Plugins/CargoBoringtun/: plugin.swift
Tests/boringtunTests/: boringtunTests.swift
audits/: 2026-02-17-Assured.md  README.md
boringtun/: Cargo.toml
boringtun-cli/: Cargo.toml
boringtun-cli/src/: main.rs
boringtun/benches/throughput_benches/: main.rs  mock_ip.rs
boringtun/src/: lib.rs
boringtun/src/device/: daita.rs  hooks.rs  mod.rs  peer.rs  pipeline.rs
boringtun/src/device/api/: command.rs  mod.rs
boringtun/src/device/daita/: actions.rs  events.rs  hooks.rs  mod.rs  types.rs
boringtun/src/noise/: handshake.rs  mod.rs  rate_limiter.rs  session.rs  timers.rs
boringtun/src/packet/: mod.rs  pool.rs  udp.rs  util.rs  wg.rs
boringtun/src/packet/ipv4/: mod.rs
boringtun/src/packet/ipv6/: mod.rs
boringtun/src/tun/: buffer.rs  channel.rs  mod.rs  pcap.rs  tun_async_device.rs
boringtun/src/tun/tun_async_device/: mod.rs  tso.rs  virtio.rs
boringtun/src/udp/: buffer.rs  channel.rs  linux.rs  mod.rs
boringtun/src/udp/socket/: linux.rs  mod.rs  windows.rs
gotatun/: Cargo.toml  build.rs
gotatun-cli/: Cargo.toml  DOCS.md  README.md
gotatun-cli/src/: main.rs
gotatun-cli/src/allocator/: mod.rs
gotatun-cli/src/unix/: drop_privileges.rs  mod.rs
gotatun-cli/src/windows/: mod.rs
gotatun/benches/crypto_benches/: blake2s_benching.rs  chacha20poly1305_benching.rs  main.rs
gotatun/benches/throughput_benches/: fragmentation.rs  main.rs  pool.rs
gotatun/examples/: multihop-router.rs
gotatun/src/: crypto.rs  key.rs  lib.rs  secret.rs  serialization.rs  task.rs
gotatun/src/device/: allowed_ips.rs  builder.rs  configure.rs  drop_privileges.rs  index_lfsr.rs  mod.rs  new_api.rs  peer.rs  peer_state.rs  psk.rs  tests.rs  tmp.rs  transports.rs
gotatun/src/device/api/: command.rs  mod.rs
gotatun/src/device/daita/: actions.rs  events.rs  hooks.rs  mod.rs  types.rs
gotatun/src/device/integration_tests/: mod.rs
gotatun/src/device/peer/: builder.rs
gotatun/src/device/tests/: mock.rs
gotatun/src/device/uapi/: command.rs  device.rs  mod.rs  socket.rs
gotatun/src/noise/: dh.rs  errors.rs  handshake.rs  index_table.rs  mod.rs  rate_limiter.rs  session.rs  timers.rs
gotatun/src/packet/: decode.rs  ip.rs  mod.rs  pool.rs  tcp.rs  udp.rs  util.rs  wg.rs
gotatun/src/packet/ipv4/: mod.rs  protocol.rs
gotatun/src/packet/ipv6/: mod.rs
gotatun/src/sleepyinstant/: mod.rs  unix.rs  windows.rs
gotatun/src/tun/: buffer.rs  channel.rs  demux.rs  merge.rs  mod.rs  nat.rs  pcap.rs  router.rs  tun_async_device.rs  userspace.rs
gotatun/src/tun/tun_async_device/: tso.rs  virtio.rs
gotatun/src/udp/: buffer.rs  channel.rs  mod.rs
gotatun/src/udp/socket/: generic.rs  linux.rs  mod.rs  windows.rs
gotatun/tests/: udp_oversized_datagram.rs
