[workspace]
members = ["gotatun", "gotatun-cli"]
resolver = "2"

[workspace.package]
rust-version = "1.88"
edition = "2024"
repository = "https://github.com/mullvad/gotatun"
license = "BSD-3-Clause"
readme = "README.md"
authors = [
    "Noah Kennedy <nkennedy@cloudflare.com>",
    "Andy Grover <agrover@cloudflare.com>",
    "Jeff Hiner <jhiner@cloudflare.com>",
    "Mullvad VPN",
]

[profile.release]
lto = true        # Enable full link-time optimization.
codegen-units = 1 # Use only 1 codegen-unit to enable full optimizations.

# build with optimizations, but keep debug symbols
[profile.release-debuginfo]
inherits = "release"
debug = true
strip = false

[profile.bench]
lto = true        # Enable full link-time optimization.
codegen-units = 1 # Use only 1 codegen-unit to enable full optimizations.

[workspace.dependencies]
aead = "0.5.0-pre.2"
base64 = "0.13.1"
bitfield-struct = "0.11.0"
blake2 = "0.10"
bytes = "1.10.1"
chacha20poly1305 = "0.10.0-pre.1"
clap = "3.1.6"
constant_time_eq = "0.4.2"
criterion = "0.7.0"
daemonize = "0.5.0"
duplicate = { version = "2.0.0", default-features = false }
either = "1.15.0"
etherparse = "0.13"
eyre = "0.6.12"
futures = "0.3.31"
gotatun = { path = "gotatun", version = "0.2.0"}
hex = "0.4"
hmac = "0.12"
ip_network = "0.4.1"
ip_network_table = "0.2.0"
ipnetwork = "0.21"
libc = "0.2"
log = "0.4"
maybenot = "2.2.2"
mock_instant = "0.3"
nix = { version = "0.30", default-features = false }
parking_lot = "0.12"
pcap-file = { version = "2.0.0" }
pnet_packet = "0.35.0"
rand = "0.9.2"
rand_chacha = "0.9.0"
rand_core = "0.6.4"
ring = "0.17"
socket2 = "0.6.0"
thiserror = "1.0.69"
tokio = "1.43.0"
tracing = "0.1.40"
tracing-appender = "0.2.1"
tracing-subscriber = "0.3.9"
tun = { version = "0.8.5", default-features = false  }
typed-builder = "0.21.0"
windows-sys = { version = ">=0.60, <=0.61" }
x25519-dalek = "2.0.0"
zerocopy = "0.8.27"