[package]
name = "gotatun-cli"
description = "an implementation of the WireGuard® protocol designed for portability and speed"
version = "0.6.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["vpn", "wireguard"]
categories = ["command-line-utilities", "network-programming"]

[[bin]]
name = "gotatun"
path = "src/main.rs"

[target.'cfg(unix)'.dependencies]
clap = { workspace = true, features = ["derive", "env"] }
daemonize = { workspace = true }
eyre = { workspace = true }
gotatun = { workspace = true, features = ["device", "tun"] }
libc = { workspace = true }
nix = { workspace = true, default-features = false, features = [
  "fs",
  "net",
  "socket",
  "time",
  "uio",
  "user",
] }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }

[target.'cfg(windows)'.dependencies]
clap = { workspace = true, features = ["derive", "env"] }
eyre = { workspace = true }
gotatun = { workspace = true, features = ["device", "tun"] }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
default = ["aws-lc-rs"]
# Use the `ring` crate as the AEAD backend. Combine with
# `--no-default-features` to avoid also pulling in `aws-lc-rs`.
ring = ["gotatun/ring"]
# Use the `aws-lc-rs` crate as the AEAD backend. Default.
aws-lc-rs = ["gotatun/aws-lc-rs"]
