[package]
name = "gotatun"
description = "an implementation of the WireGuard® protocol designed for portability and speed"
version = "0.5.1"
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
categories = ["asynchronous", "network-programming"]
keywords = ["vpn", "wireguard"]
readme.workspace = true

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = [
  "aarch64-apple-darwin",
  "x86_64-pc-windows-msvc",
  "aarch64-linux-android"
]

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[[bench]]
harness = false
name = "crypto_benches"

[[bench]]
name = "throughput_benches"
harness = false

[dependencies]
aead = { workspace = true }
base64 = { workspace = true }
bitfield-struct = { workspace = true }
blake2 = { workspace = true }
bytes = { workspace = true }
chacha20poly1305 = { workspace = true }
constant_time_eq = { workspace = true }
duplicate = { workspace = true, default-features = false }
either = { workspace = true }
eyre = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
ip_network = { workspace = true }
ip_network_table = { workspace = true }
ipnetwork = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
maybenot = { workspace = true, optional = true }
mock_instant = { workspace = true, optional = true }
parking_lot = { workspace = true }
pcap-file = { workspace = true, optional = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
rand_core = { workspace = true, features = ["getrandom"] }
ring = { workspace = true }
socket2 = { workspace = true, features = ["all"] }
thiserror = { workspace = true, optional = true }
tokio = { workspace = true, features = ["full"] }
tun = { workspace = true, default-features = false, features = ["async"], optional = true }
typed-builder = { workspace = true }
x25519-dalek = { workspace = true, features = [
  "reusable_secrets",
  "static_secrets",
] }
zerocopy = { workspace = true, features = ["derive", "std"] }

[dev-dependencies]
criterion = { workspace = true, features = ["html_reports"] }
etherparse = { workspace = true }
test-log = { workspace = true }
tokio-stream = { workspace = true, features = ["sync"] }
x25519-dalek = { workspace = true, features = ["getrandom"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { workspace = true, features = [
  "Win32",
  "Win32_Foundation",
  "Win32_Networking",
  "Win32_Networking_WinSock",
  "Win32_System_IO",
] }

[target.'cfg(unix)'.dependencies]
nix = { workspace = true, default-features = false, features = [
  "fs",
  "net",
  "socket",
  "time",
  "uio",
  "user",
] }

[features]
default = []
daita = ["device", "dep:maybenot"]
# Add non-compliant UAPI support for DAITA.
# See `UAPI.md` for details.
daita-uapi = ["daita"]
device = ["thiserror"]
pcap = ["dep:pcap-file"]
tun = ["dep:tun", "thiserror"]
# UDP GRO appears to be broken on Windows.
# In some cases it fails to return UDP_COALESCED_INFO
windows-gro = []
